--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
     "ts:check": "tsc"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.6.1",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
     "expo": "~51.0.9",
+    "expo-asset": "~10.0.6",
+    "expo-font": "~12.0.6",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-maps": "1.14.0",
-    "react-native-svg": "15.2.0",
-    "expo-asset": "~10.0.6",
-    "expo-font": "~12.0.6"
+    "react-native-svg": "15.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "react-native-svg-transformer": "^1.5.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
