--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.9",
     "expo": "~51.0.9",
     "expo-asset": "~10.0.6",
     "expo-font": "~12.0.6",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-maps": "1.14.0",
     "react-native-svg": "15.2.0"
   },
@@ -27,7 +30,7 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "react-native-svg-transformer": "^1.5.0",
-    "tailwindcss": "^3.3.2",
+    "tailwindcss": "3.3.2",
     "typescript": "^5.1.3"
   },
   "private": true
