--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,16 @@
-{
+{ 
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "resolveJsonModule": true,
+    "paths": {
+      "svg/*": ["./assets/svg/*"],
+      "assets/*": ["./assets/*"],
+      "appConfig": ["./config.json"]
+    }
   },
   "include": [
     "**/*.ts",
-    "**/*.tsx"
-  ]
+    "**/*.tsx",  
+  ],
 }
