Modal refactoring & components split

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
       "svg/*": ["./assets/svg/*"],
       "assets/*": ["./assets/*"],
       "appConfig": ["./config.json"],
+      "hooks/*": ["./src/hooks/*"],
+      "services/*": ["./src/services/*"],
       "declarations": ["./app-declarations.d.ts"]
     }
   },
