--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "expo-asset": "~10.0.6",
     "expo-font": "~12.0.6",
     "expo-image-picker": "~15.0.7",
+    "expo-navigation-bar": "~3.0.7",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-maps": "1.14.0",
-    "react-native-svg": "15.2.0"
+    "react-native-modal": "^13.0.1",
+    "react-native-svg": "15.2.0",
+    "react-native-system-navigation-bar": "^2.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
