--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@gorhom/portal": "^1.0.14",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -18,25 +20,25 @@
     "expo": "~51.0.9",
     "expo-asset": "~10.0.6",
     "expo-font": "~12.0.6",
-    "expo-image-picker": "~15.0.7",
+    "expo-image-picker": "~15.1.0",
     "expo-navigation-bar": "~3.0.7",
     "expo-status-bar": "~1.12.1",
+    "jwt-decode": "^4.0.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "0.74.5",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-maps": "1.14.0",
     "react-native-modal": "^13.0.1",
     "react-native-svg": "15.2.0",
-    "react-native-system-navigation-bar": "^2.6.4",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-system-navigation-bar": "^2.6.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
     "react-native-svg-transformer": "^1.5.0",
     "tailwindcss": "3.3.2",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
