--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-element-dropdown": "^2.12.2",
     "react-native-maps": "1.14.0",
     "react-native-modal": "^13.0.1",
+    "react-native-safe-area-context": "^5.2.0",
     "react-native-svg": "15.2.0",
     "react-native-system-navigation-bar": "^2.6.4"
   },
