--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-asset": "~10.0.6",
     "expo-font": "~12.0.6",
     "expo-image-picker": "~15.1.0",
+    "expo-linear-gradient": "~13.0.2",
     "expo-navigation-bar": "~3.0.7",
     "expo-status-bar": "~1.12.1",
     "jwt-decode": "^4.0.0",
@@ -30,8 +31,9 @@
     "react-native-element-dropdown": "^2.12.2",
     "react-native-maps": "1.14.0",
     "react-native-modal": "^13.0.1",
-    "react-native-safe-area-context": "^5.2.0",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-svg": "15.2.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-system-navigation-bar": "^2.6.4"
   },
   "devDependencies": {
