--- a/config.json
+++ b/config.json
@@ -9,6 +9,9 @@
     "author": "Author",
     "book": "Book",
     "userBookItem": "UserBookItem",
-    "user": "User"
-  }
+    "user": "User",
+    "match": "Match",
+    "exchange": "Exchanges"
+  },
+  "apiReportingEndpoint": "http://192.168.1.100:8003/api"
 }
